--- a/package.json
+++ b/package.json
@@ -16,22 +16,30 @@
     "mushroom"
   ],
   "main": "dist/openui5/ratingshroom/library-preload.js",
+  "files": [
+    "dist",
+    "src",
+    "ui5.yaml"
+  ],
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-openui5": "^0.2.3",
-    "karma-qunit": "^2.1.0",
-    "qunit": "^2.8.0"
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-mlauffer-ui5": "^0.3.3",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.0",
+    "karma-coveralls": "^2.1.0",
+    "karma-ui5": "^3.0.2"
   },
   "scripts": {
     "start": "ui5 serve",
-    "build": "ui5 build",
+    "start:dist": "ui5 serve --config ui5-dist.yaml",
+    "build": "ui5 build --clean-dest",
+    "lint": "eslint src test demo",
+    "lint:ci": "eslint src test -f @microsoft/eslint-formatter-sarif -o target/eslint.sarif",
+    "lint:fix": "eslint src test demo --fix",
     "test": "karma start",
-    "preversion": "npm test",
-    "version": "npm run build && git add -A dist",
-    "postversion": "git push && git push --tags"
+    "test:ci": "karma start karma.ci.conf"
   },
   "repository": {
     "type": "git",
