--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,4 +1,19 @@
-specVersion: '0.1'
+specVersion: '3.0'
 metadata:
   name: openui5-ratingshroom
+  copyright: |-
+    openui5-ratingshroom
+     * (c) Copyright 2017-${currentYear} Mauricio Lauffer
+     * Licensed under the MIT license. See LICENSE file in the project root for full license information.
 type: library
+framework:
+  name: OpenUI5
+  version: 1.108.0
+  libraries:
+    - name: sap.ui.core
+    - name: sap.m
+      development: true
+builder:
+  resources:
+    excludes:
+      - "/test-resources/**"
