--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,8 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
           cache: npm
+      - run: npm whoami
       - run: npm publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_SECRET }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
