--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
           cache: npm
+      - run: npm whoami
       - run: npm publish --tag=beta
         env:
           NPM_TOKEN: ${{ secrets.NPM_SECRET }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
