--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          registry-url: https://registry.npmjs.org/
+          registry-url: https://registry.npmjs.org
           cache: npm
-      - run: npm publish --tag=beta
+      - run: npm publish --tag beta --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
