ci: Reusable workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,13 +9,6 @@ permissions: read-all
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 20
-        cache: npm
-    - run: npm install -g eslint --ignore-scripts
-    - run: npm ci --ignore-scripts
-    - run: npm test
+    # uses: mauriciolauffer/.github/workflows/reusable-workflow.yml@main
+    uses: mauriciolauffer/.github/workflow-templates/test.yml@main
+
