ci: Reusable workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,6 @@ jobs:
   test:
     # uses: mauriciolauffer/.github/workflows/reusable-workflow.yml@main
     # uses: mauriciolauffer/.github/workflow-templates/test.yml@main
-    uses: mauriciolauffer/.github/workflows/test.yml@main
+    # uses: mauriciolauffer/.github/workflows/test.yml@main
+    uses: mauriciolauffer/.github/.github/workflows/test.yml@main
 
