ci: Reusable workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 permissions: read-all
 
 jobs:
-  test:
+  test-reuse:
     # uses: mauriciolauffer/.github/workflows/reusable-workflow.yml@main
     # uses: mauriciolauffer/.github/workflow-templates/test.yml@main
     # uses: mauriciolauffer/.github/workflows/test.yml@main
