ci: Update scorecards-analysis.yml

--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -19,5 +19,5 @@ jobs:
       id-token: write
     uses: mauriciolauffer/.github/.github/workflows/scorecards-analysis.yml@main
     secrets:
-      envPAT: ${{ secrets.SCORECARD_READ_TOKEN }}
+      SCORECARD_READ_TOKEN: ${{ secrets.SCORECARD_READ_TOKEN }}
     
